--- a/TRansmicibilidad implicito corregido.ipynb
+++ b/TRansmicibilidad implicito corregido.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlIQJRq4q35pir0Opv/98C",
+      "authorship_tag": "ABX9TyOe+EKkRLPl+9cNPELKY/S3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "L=10000 #distancia del yacimiento\n",
         "dx=250 #distancia eentre nodos\n",
         "Tiempo= 100000 #tiempo total\n",
-        "DT=1 #delta tiempo\n",
+        "DT=10 #delta tiempo\n",
         "K=50 #permeabilidad MD\n",
         "Por=0.2 #porosidad\n",
         "vis=1 # viscosidad en ceentipoy\n",
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "L6hZH-dL8_t_"
       },
-      "execution_count": 2,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -71,45 +71,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E1RgID2h-fPU",
-        "outputId": "d880531e-2b59-4936-e22b-bf43ad110c17"
+        "outputId": "6ca9a149-f2c8-4f6d-a570-8500eea41a2c"
       },
-      "execution_count": 3,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.004"
+              "0.04"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 61
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#esquema explicito\n",
-        "def Presdt(P0,P1,P2,Eta):\n",
-        " Pdt=P1+Eta*(P0-2*P1+P2)\n",
-        " return(Pdt)\n",
-        " \n",
-        "Pexplicita=np.zeros((Tiempo//DT,(L//dx)+2))"
-      ],
-      "metadata": {
-        "id": "El6fB0yh9Aif"
-      },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#condiciones iniciales\n",
-        "Pyac=1000\n",
-        "Piz=0\n",
-        "Pder=500\n",
+        "Pyac=10000\n",
+        "Piz=500\n",
+        "Pder=0\n",
         "Pin=np.ones((L//dx)+2)\n",
         "Pres=np.zeros((L//dx)+2)\n",
         "Pres2=np.zeros((L//dx)+2)\n",
@@ -123,87 +107,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yb4OX73oO6xa",
-        "outputId": "b316ba95-580d-4f89-e9c9-0e0d9d42ef67"
+        "outputId": "c99a28c3-7da1-436d-96c7-c7f8db2540df"
       },
-      "execution_count": 6,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([-1000.,  1000.,  1000.,  1000.,  1000.,  1000.,  1000.,  1000.,\n",
-              "        1000.,  1000.,  1000.,  1000.,  1000.,  1000.,  1000.,  1000.,\n",
-              "        1000.,  1000.,  1000.,  1000.,  1000.,  1000.,  1000.,  1000.,\n",
-              "        1000.,  1000.,  1000.,  1000.,  1000.,  1000.,  1000.,  1000.,\n",
-              "        1000.,  1000.,  1000.,  1000.,  1000.,  1000.,  1000.,  1000.,\n",
-              "        1000.,     0.])"
+              "array([ -9000.,  10000.,  10000.,  10000.,  10000.,  10000.,  10000.,\n",
+              "        10000.,  10000.,  10000.,  10000.,  10000.,  10000.,  10000.,\n",
+              "        10000.,  10000.,  10000.,  10000.,  10000.,  10000.,  10000.,\n",
+              "        10000.,  10000.,  10000.,  10000.,  10000.,  10000.,  10000.,\n",
+              "        10000.,  10000.,  10000.,  10000.,  10000.,  10000.,  10000.,\n",
+              "        10000.,  10000.,  10000.,  10000.,  10000.,  10000., -10000.])"
             ]
           },
           "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "t=DT\n",
-        "Pexplicita[0]=Pin\n",
-        "Pexplicita.shape\n",
-        "while t<Tiempo: #ciclo de tiempo\n",
-        "  for i in range(0,len(Pin)-1):#ciclo de espacio\n",
-        "    if i==0:\n",
-        "      Pres[i]=2*Piz-Pin[1]\n",
-        "    elif i==len(Pin)-1:\n",
-        "      Pres[i]=2*Pder-Pin[len(Pin)-2]\n",
-        "    else:\n",
-        "      Pres[i]=Presdt(Pin[i-1],Pin[i],Pin[i+1],Eta)\n",
-        "  Pexplicita[t//DT]=Pres\n",
-        "  t=t+DT\n",
-        "  Pin=Pres\n",
-        "  "
-      ],
-      "metadata": {
-        "id": "OzT2B70-XxZc"
-      },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "Pexplicita #todas las presiones"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ifbib-YLp7EN",
-        "outputId": "2e5d7c1e-e8a2-4248-f8eb-cd58d270703a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[   0.        , 1000.        , 1000.        , ..., 1000.        ,\n",
-              "        1000.        ,  500.        ],\n",
-              "       [   0.        ,  999.        , 1000.        , ..., 1000.        ,\n",
-              "         999.5       ,    0.        ],\n",
-              "       [   0.        ,  998.002     ,  999.998002  , ...,  999.9995    ,\n",
-              "         998.5009995 ,    0.        ],\n",
-              "       ...,\n",
-              "       [   0.        ,   13.63312961,   26.89401597, ...,   26.88851639,\n",
-              "          13.62996975,    0.        ],\n",
-              "       [   0.        ,   13.63275736,   26.89328164, ...,   26.88778222,\n",
-              "          13.6295976 ,    0.        ],\n",
-              "       [   0.        ,   13.63238513,   26.89254734, ...,   26.88704806,\n",
-              "          13.62922545,    0.        ]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 65
+          "execution_count": 62
         }
       ]
     },
@@ -211,37 +132,152 @@
       "cell_type": "code",
       "source": [
         "#esquema implicito\n",
-        "\n",
-        "Pimplicita=np.zeros((Tiempo//DT,L//dx+2))\n",
-        "Pin=np.ones((L//dx)+2)\n",
-        "Pres=np.zeros((L//dx)+2)\n",
+        "Qimplicita=np.zeros((Tiempo//DT,L//dx))\n",
+        "Pin=np.ones((L//dx))\n",
+        "Pres=np.zeros((L//dx))\n",
         "Pin=Pin*Pyac\n",
         "Pin[0]=Piz\n",
         "Pin[len(Pin)-1]=Pder\n",
         "N=(L//dx)+2\n",
-        "Matriz_resolution=np.zeros([N-2,N-2])"
+        "Baccumul=A*dx*Por*Comptotal/Beta\n",
+        "Transmi=K*A/(vis*Beta*dx)\n",
+        "B=np.zeros([N-2,N-2])\n",
+        "T=np.zeros([N-2,N-2])\n"
       ],
       "metadata": {
         "id": "iYB2M2FwEmW5"
       },
-      "execution_count": 17,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "for i in range(N-2):\n",
-        "  Matriz_resolution[i,i]=1+2*Eta\n",
+        "for i in range(0,N-2):\n",
+        "  B[i,i]=Baccumul\n",
+        "for i in range(0,N-2):\n",
+        "  T[i,i]=2*Transmi\n",
         "  if i>0:\n",
-        "    Matriz_resolution[i,i-1]=-Eta\n",
+        "    T[i,i-1]=-Transmi\n",
         "  if i<(N-3):\n",
-        "    Matriz_resolution[i,i+1]=-Eta\n",
-        "\n"
+        "    T[i,i+1]=-Transmi\n",
+        "T[0,0]=3*Transmi\n",
+        "T[N-3,N-3]=Transmi"
       ],
       "metadata": {
         "id": "XvrBM3Rj8-PJ"
       },
-      "execution_count": 18,
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Matriz_resolution=np.zeros_like(T)\n",
+        "Matriz_resolution=T*(B/DT)\n",
+        "Vector_sol=np.matmul(B/DT,Pin[1:-1]) #parte derecha de la solucion\n",
+        "Vector_sol=Vector_sol\n",
+        "Q=np.zeros_like(Vector_sol)\n",
+        "Q[0]=2*Transmi*Piz #caudal\n",
+        "Vector_sol=Vector_sol+Q\n"
+      ],
+      "metadata": {
+        "id": "UVIkVtO1V7wl",
+        "outputId": "e02084f6-7447-4b11-d7c3-fd7b248674b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 263
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-56-3cd005601029>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mMatriz_resolution\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mMatriz_resolution\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mDT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mVector_sol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mDT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mPin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#parte derecha de la solucion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mVector_sol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mVector_sol\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mQ\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVector_sol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 40 is different from 4)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Qcal=np.linalg.solve(Matriz_resolution,Vector_sol)"
+      ],
+      "metadata": {
+        "id": "Xw5bJAXhYbI9"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Qcal"
+      ],
+      "metadata": {
+        "id": "uvwiNkyhYcYn",
+        "outputId": "eb75a61f-0c81-48f2-845e-b72d40f310a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.0085, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125,\n",
+              "       0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125,\n",
+              "       0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125,\n",
+              "       0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125,\n",
+              "       0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.0125, 0.025 ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Qimplicita[0]=Pin\n",
+        "t=DT\n",
+        "while t<Tiempo:\n",
+        "  Pcal=np.linalg.solve(Matriz_resolution,Pin[1:-1])\n",
+        "  Pres=np.concatenate(([Piz],Qcal,[Pder]))\n",
+        "  Pin=Pres\n",
+        "  t=t+DT"
+      ],
+      "metadata": {
+        "id": "ykxy0c2VYcs6"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tckVUETEYdO4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Q6MBWGF5Ydj0"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -261,7 +297,7 @@
       "metadata": {
         "id": "5ol3BdU9Givn"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -273,7 +309,7 @@
       "metadata": {
         "id": "xwjPddyGL3F4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,7 +324,7 @@
         "id": "7ADNAV8Ec3Pt",
         "outputId": "81f01fa9-a447-433a-cc55-c5e35a803d67"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -357,7 +393,7 @@
       "metadata": {
         "id": "SOAC7_ZYNKR0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -376,7 +412,7 @@
         "id": "4QwVXF-1q2GD",
         "outputId": "f1917ae6-7f6b-4fb1-e026-d1dcd526563f"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +451,7 @@
         "id": "uUhifIiwrlvb",
         "outputId": "97234bb2-4dec-4ae6-8dda-13507c02eb2b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
